--- a/products.html
+++ b/products.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,14 +13,73 @@
     <link rel="stylesheet" href="/styles/responsive.css">
     <title>products</title>
 </head>
+
 <body>
+    <header>
+        <div class="container">
+            <div class="nav-bar">
+                <nav class="nav-top">
+                    <a href="/" class="app-logo">
+                        <img src="/images/svgs/KHOOMI.svg" alt="KHOOMI" class="app-logo__img">
+                    </a>
+                    <div class="nav-top__search">
+                        <img src="/images/svg-icon/Search.svg" alt="icon" class="nav-top__search-icon">
+                        <input type="text" name="Search" class="nav-top__search-box"
+                            placeholder="Search For Products, Brands & Categories">
+                    </div>
+                    <div class="nav-top__icons">
+                        <a href="#" class="nav-top__icon">
+                            <img src="/images/svg-icon/heart.svg" alt="img">
+                        </a>
+                        <a href="#" class="nav-top__icon">
+                            <img src="/images/svg-icon/person.svg" alt="img">
+                        </a>
+                        <a href="#" class="nav-top__icon">
+                            <img src="/images/svg-icon/shop.svg" alt="img">
+                        </a>
+                    </div>
+                    <div class="nav__btn">
+                        <span class="nav__btn-line"></span>
+                    </div>
+                </nav>
+                <nav class="nav-bottom">
+                    <ul class="menu">
+                        <li class="menu__items">
+                            <a href="/" class="menu__item">Home</a>
+                        </li>
+                        <li class="menu__items">
+                            <a href="/products" class="menu__item">Products</a>
+                        </li>
+                        <li class="menu__items">
+                            <a href="/Trending" class="menu__item">Trending</a>
+                        </li>
+                    </ul>
+                    <div class="nav-menu">
+                        <input type="text" name="search" class="nav-menu__search" placeholder="Search">
+                        <ul class="mobile-menu">
+                            <li class="mobile-menu__items">
+                                <a href="/" class="mobile-menu__item">Home</a>
+                            </li>
+                            <li class="mobile-menu__items">
+                                <a href="/products" class="mobile-menu__item">Products</a>
+                            </li>
+                            <li class="mobile-menu__items">
+                                <a href="/Trending" class="mobile-menu__item">Trending</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
     <main class="main --margin">
         <div class="container">
             <div class="main-top">
                 <h5 class="main-top__title">EXPLORE AWESOME PRODUCTS</h5>
                 <h2 class="main-top__text">RECOMMENDED FOR YOU</h2>
             </div>
-            <div class="main-products">    
+            <div class="main-products">
                 <div class="main-products__products">
                     <div class="main-products__product">
                         <img src="/images/wach1.png" alt="img" class="main-products__product__img">
@@ -48,11 +108,12 @@
             </div>
         </div>
         <div class="ads --margin">
-            <div class="ads__wrapper" >
+            <div class="ads__wrapper">
                 <h1 class="ads__title">Sneakers Never Run Out Of Style Get 50% Off Sitewide</h1>
                 <a href="#" class="ads__btn">Start Shopping</a>
             </div>
         </div>
     </main>
 </body>
+
 </html>
